# Alfred

./: .gitignore  CMakeLists.txt  README.md  TODO  alfred.service  main.xml
Alfred/: CMakeLists.txt
Alfred/src/: ApiHttp.cpp  ApiHttp.hpp  ApiWs.cpp  ApiWs.hpp  HttpClientTransactions.cpp  HttpClientTransactions.hpp  LoadFile.cpp  LoadFile.hpp  Service.cpp  Service.hpp  Store.cpp  Store.hpp  TimeKeeper.cpp  TimeKeeper.hpp  main.cpp
